UI fix on margin spacing

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 
 html,
 body {
-    margin: 1em;
+    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
@@ -164,6 +164,10 @@ img {
     border-radius: 3px;
 }
 
+.page-title-content {
+    margin: 0 4em;
+}
+
 input[type="checkbox"] {
     transform: scale(1.5);
     margin-right: 0.6em;
@@ -183,8 +187,24 @@ p {
     text-align: center;
 }
 
+.container-body {
+    margin: 1em 8em;
+}
+
 @media (max-width: 768px) {
-    body {
-        margin: 0em;
+    .intro{
+        display: none;
+    }
+    
+    .container-body {
+        margin: 5px;
+    }
+
+    .page-title-content {
+        margin: 2px;
+    }   
+
+    .column {
+        padding: 0;
     }
 }
